# netscanner-tool

./: .gitignore  README.md  go.mod  main.go  pyproject.toml
internal/config/: config.go
internal/discovery/: discovery.go
internal/scanner/: ports.go  ports_test.go  scanner.go  scanner_test.go  targets.go  targets_test.go
internal/tui/: tui.go
internal/ui/: ui.go
src/netscanner/: __init__.py  __main__.py  cli.py  config.py  display.py  models.py  scanner.py
src/netscanner/scanners/: __init__.py  arp.py  port.py  vendor.py
src/netscanner/utils/: __init__.py  system_check.py
