[project]
name = "netscanner-tool"
version = "0.2.0"
description = "A modern async network scanner for discovering devices and open ports"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aayush Pokharel", email = "aayushpokharel@gmail.com"}
]
keywords = ["network", "scanner", "nmap", "security", "pentesting", "arp", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]

dependencies = [
    "aiohttp>=3.13.2",
    "rich>=14.2.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
netscanner = "netscanner.cli:main"

[project.urls]
Homepage = "https://github.com/Aayush9029/netscanner-tool"
Repository = "https://github.com/Aayush9029/netscanner-tool"
Documentation = "https://github.com/Aayush9029/netscanner-tool#readme"
Issues = "https://github.com/Aayush9029/netscanner-tool/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netscanner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
